[package]
name = "r4"
version = "1.0.1"
authors = [ "Stu Black <trurl@freeshell.org>" ]
description = "A compact macro that generates iterators using for comprehensions and natural Rust syntax."
documentation = "https://docs.rs/r4/1.0.1"
repository = "https://github.com/dstu/r4"
keywords = ["iterator", "iterate", "for", "comprehension", "macro"]
license = "Apache-2.0"
maintenance = { status = "passively-maintained" }
